k8s/talos/infra/grafana/httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-private
      namespace: traefik
  hostnames:
    - grafana.local.bigd.no
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: grafana
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
